Fixed picture scaling on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -262,6 +262,10 @@ img {
         height: 60%;
         border-radius: 10px 10px 0 0;
     }
+
+    .img-wrapper img {
+        object-fit: contain !important;
+    }
 }
 @media (max-width: 480px) {
     .img-wrapper {
@@ -278,6 +282,10 @@ img {
 
     .card-content p {
         display: none;
+    }
+
+    .img-wrapper img {
+        object-fit: contain !important;
     }
 }
 
@@ -319,7 +327,7 @@ img {
     .flex.flex-row.items-center img {
         width: 12rem !important;
         height: 12rem !important;
-        flex: auto;
+        object-fit: contain !important;
     }
 
     .flex.flex-row.items-center h1 {
@@ -377,7 +385,7 @@ img {
     .flex.flex-row.items-center img {
         width: 10rem !important;
         height: 10rem !important;
-        flex: auto;
+        object-fit: contain !important;
     }
 
     .flex.flex-row.items-center h1 {
